data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_909.wast
;; 10. **Indirect Function Call with Embedded Br:**    Use `call_indirect` to dynamically resolve and execute functions with `br` instructions that redirect control flow to different blocks. Verify if the implementations correctly handle the operands, stack, and function returns based on indirect function and branching behavior.

(assert_invalid
  (module
    (import "env" "call_indirect" (func $call_indirect (param i32) (result i32)))
    (table anyfunc (elem $f1))
    (type $t0 (func (result i32)))
    (func $main
      (block (result i32)
        (br 0)
        (call_indirect (type $t0) (i32.const 0))
      )
    )
    (func $f1 (result i32)
      (i32.const 42)
    )
  )
  "type mismatch"
)